--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
-  }
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  },
   "dependencies": {
     "body-parser": "^2.2.2",
     "dotenv": "^17.2.3",
@@ -17,5 +13,9 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2"
-  }
+  },
+  "keywords": [],
+  "license": "ISC",
+  "type": "commonjs"
+
 }
