--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "mongoose": "^9.1.5",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "path": "^0.12.7"
   },
   "keywords": [],
   "license": "ISC",
   "type": "commonjs"
-
 }
